<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_task_bottom_sheet_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="72dp"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/add_new_tak_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_new_task"
        android:textAppearance="@style/TextAppearance.App.TitleMedium"
        android:textColor="?attr/colorOnSurface" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_title_edit_text"
        style="@style/Widget.App.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect"
            android:singleLine="true"
            tools:text="hi" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_description_edit_text"
        style="@style/Widget.App.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:singleLine="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/select_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:text="@string/select_time"
        android:textAppearance="@style/TextAppearance.App.BodyLarge"
        android:textColor="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:textAppearance="@style/TextAppearance.App.BodyMedium"
        android:textColor="?attr/colorOnSurfaceVariant"
        tools:text="12:00 AM" />

    <TextView
        android:id="@+id/select_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:text="@string/select_date"
        android:textAppearance="@style/TextAppearance.App.BodyLarge"
        android:textColor="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:textAppearance="@style/TextAppearance.App.BodyMedium"
        android:textColor="?attr/colorOnSurfaceVariant"
        tools:text="20 May" />
</LinearLayout>
