<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context=".ui.update_task.UpdateTaskFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/title_todo_list"
        app:titleTextAppearance="@style/TextAppearance.App.TitleLarge"
        app:titleTextColor="?colorOnPrimary" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="16dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias=".1">

        <LinearLayout
            android:id="@+id/update_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:context=".ui.update_task.UpdateTaskFragment">

            <TextView
                android:id="@+id/update_task_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/update_task"
                android:textAppearance="@style/TextAppearance.App.TitleMedium"
                android:textColor="?colorOnSurface" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_title_edit_text"
                style="@style/Widget.App.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoCorrect"
                    android:paddingTop="42dp"
                    android:singleLine="true"
                    tools:text="hi" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_description_edit_text"
                style="@style/Widget.App.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:paddingTop="42dp"
                    android:singleLine="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/select_time"
                android:textAppearance="@style/TextAppearance.App.BodyLarge"
                android:textColor="?colorOnSurface" />

            <TextView
                android:id="@+id/time_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.App.BodyMedium"
                android:textColor="?colorOnSurfaceVariant"
                tools:text="12:00 AM" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/select_date"
                android:textAppearance="@style/TextAppearance.App.BodyLarge"
                android:textColor="?colorOnSurface" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.App.BodyMedium"
                android:textColor="?colorOnSurfaceVariant"
                tools:text="20 May" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                style="@style/Widget.App.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="32dp"
                android:paddingHorizontal="64dp"
                android:text="@string/save_changes" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
